@@ -3,6 +3,7 @@
 - Improved: Removed Cockroaches from kill feed, players will no longer get points for killing them.
 - Fix: Lua errors when cleaning up map during players view controlled by point_viewcontrol.
 - Fix: Medkit not properly working in singleplayer.
+- Fix: Selection of best weapon on depleted ammo and player spawn.
 
 0.9.5
 - Improved: Add projected textures as an option for physcannon glow, enabled by default (physcannon_glow = 1)
